fixed gaps between keys

--- a/styles.css
+++ b/styles.css
@@ -34,15 +34,15 @@ div {
 }
 
 .black-keys kbd:nth-child(1) {
-    margin-left: 3.1rem;
+    margin-left: 3.2rem;
 }
 
 .black-keys kbd:nth-child(2) {
-    margin-left: 1.8rem;
+    margin-left: 1.65rem;
 }
 
 .black-keys kbd:nth-child(3) {
-    margin-left: 6.4rem;
+    margin-left: 6.55rem;
 }
 
 .black-keys kbd:nth-child(4) {
